--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -30,7 +30,9 @@
  *
  * Update the foundational and global aspects of the page.
  */
-
+.pre {
+  background:#fff;
+}
 html {
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
 }
@@ -109,7 +111,7 @@ a.sidebar-nav-item:focus {
   .sidebar-sticky {
     position: absolute;
     right:  1rem;
-    bottom: 1rem;
+    top:    1rem;
     left:   1rem;
   }
 }
