--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,4 +26,10 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+  <style>
+  .post-list-heading{
+   visibility: hidden;
+  }
+  </style>
+  
 </head>
