--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item active" href="{{ site.baseurl }}">首页</a>
+      <a class="sidebar-nav-item active" href="{{ site.url }}">首页</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
