--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,19 @@
   {% include head.html %}
 
   <body class="theme-base-0c">
-
     {% include sidebar.html %}
-
+    
     <div class="content container">
       {{ content }}
+      
+
+      <!-- <div>
+        <p>按分类查看</p>
+        {% for category in site.categories %}
+        {% for post in category.first %}<li><a class="sidebar-btn" href="{{site.baseurl}}/categories/{{ category | first }}">{{category.first}}({{category.last.size}})</a></li>
+        {% endfor %}
+        {% endfor %}
+      </div> -->
     </div>
   
   </body>
