--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -37,5 +37,9 @@
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <span id="busuanzi_container_site_pv">总访问量<span id="busuanzi_value_site_pv"></span>次</span>
+    <br /><span id="busuanzi_container_site_uv">
+      欢迎，你是第<span id="busuanzi_value_site_uv"></span>位小伙伴
+    </span>
   </div>
 </div>
