--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -7,7 +7,7 @@ layout: default
 	　　{% for post in site.categories.[page.category] %}
 	　　　　<li class="card blog-item" data-category="{{post.category}}">
 				<div class="card-content">
-					<div class="card-title"><a href="/blog{{ post.url }}">{{ post.title }}</a></div>
+					<div class="card-title"><a href="{{ post.url }}">{{ post.title }}</a></div>
 				  	<p class="excerpt">{{ post.excerpt | remove: '<p>' | remove: '</p>' }}</p>
 					  <p>{{ post.date | date: "%Y年%m月%d日" }}</p>
 				</div>
