--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,15 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }} <span style="margin-left:5rem;"> views:<span id="busuanzi_value_page_pv"></span></span>
-    
+  <span class="post-date">
+    {{ page.date | date_to_string }} 
+    <span style="margin-left:5rem;"> 
+      views:
+      <span id="busuanzi_value_page_pv">
+
+      </span>
+    </span>
+  </span>
   {{ content }}
 </div>
 
