--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -5,11 +5,13 @@ layout: default
 <div class="row">
 	<ul>
 	　　{% for post in site.categories.[page.category] %}
-	　　　　<li class="card blog-item" data-category="{{post.category}}">
+	　　　　<li class="card blog-item" data-category="{{page.category}}" >
 				<div class="card-content">
-					<div class="card-title"><a href="{{ post.url }}">{{ post.title }}</a></div>
-				  	<p class="excerpt">{{ post.excerpt | remove: '<p>' | remove: '</p>' }}</p>
-					  <p>{{ post.date | date: "%Y年%m月%d日" }}</p>
+					<div class="card-title">
+						<a href="{{ post.url }}">{{ post.title }}</a>
+					</div>
+				  	<p class="excerpt">{{ post.excerpt}}</p>
+					<p>{{ post.date | date: "%Y年%m月%d日" }}</p>
 				</div>
 			</li>
 	　　{% endfor %}
