--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="row">
 	<ul>
 	　　{% for post in site.categories.[page.category] %}
-	　　　　<li class="card blog-item" data-category="{{page.category}}" >
+	　　　　<li class="card blog-item" >
 				<div class="card-content">
 					<div class="card-title">
 						<a href="{{ post.url }}">{{ post.title }}</a>
