update gitment config

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,12 +21,12 @@ layout: default
 <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
 <script>
 var gitment = new Gitment({
-  id: '页面 ID', // 可选。默认为 location.href
-  owner: '你的 GitHub ID',
-  repo: '存储评论的 repo',
+  //id: '页面 ID', // 可选。默认为 location.href
+  owner: 'HawkeW',
+  repo: 'https://github.com/HawkeW/HawkeW.github.io',
   oauth: {
-    client_id: '你的 client ID',
-    client_secret: '你的 client secret',
+    client_id: 'd457861dcc1a62123b10',
+    client_secret: 'b5e1a5cd5b92856760bf0db81f8e294f9d1a6ede',
   },
 })
 gitment.render('container')
