--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
 <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
 <script>
   const gitment = new Gitment({
-  id: '{{ page.title }}', // optional
+  id: location.href,  // optional
   owner: 'HawkeW',
   repo: 'HawkeW.github.io',
   oauth: {
