localize gitment.js

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
 </div>
 
 <div id="comments"></div>
-<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+<script src="/public/js/gitment.js"></script>
 <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
 <script>
   const gitment = new Gitment({
