--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,27 @@ layout: default
   {{ content }}
 </div>
 
+<!--   gitalk       -->
+<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+    <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
+
+<div class="comment">
+    <div id="gitalk-container"></div>
+    
+    <script>
+    var gitalk = new Gitalk({
+        id: 'page.date',
+        clientID: 'd457861dcc1a62123b10',
+        clientSecret: 'b5e1a5cd5b92856760bf0db81f8e294f9d1a6ede',
+        repo: 'HawkeW.github.io',
+        owner: 'HawkeW',
+        admin: ['HawkeW'], 
+        labels: ['Gitalk'],
+    })
+    gitalk.render('gitalk-container')
+    </script> 
+</div>
+<!-- 
 <div id="comments"></div>
 <script src="/public/js/gitment.js"></script>
 <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
@@ -32,7 +53,7 @@ layout: default
   // For more available options, check out the documentation below
 })
 gitment.render('comments')
-</script>
+</script> -->
 
 <div class="related">
   <h2>相关文章</h2>
