--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
     <div id="gitalk-container"></div>
     <script>
     var gitalk = new Gitalk({
-        id: 'page.date',
+        id: 'page.date', //123
         clientID: 'd457861dcc1a62123b10',
         clientSecret: 'b5e1a5cd5b92856760bf0db81f8e294f9d1a6ede',
         repo: 'HawkeW.github.io',
