--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="row">
 	<ul>
-	　　{% for post in site.categories[page.category] %}
+	　　{% for post in site.categories.[page.category] %}
 	　　　　<li class="card blog-item" >
 				<div class="card-content">
 					<div class="card-title">
