--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,11 @@
     <div class="content container">
       {{ content }}
     </div>
-  
+    <script type="text/javascript">
+      $(document).ready(function() {
+          $('#toc').toc();
+      }); 
+      </script>
+    
   </body>
 </html>
