--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,12 +25,15 @@
   <!-- gitalk -->
   <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
   <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
-  
+  <!-- index.js -->
+  <script src="/public/js/index.js"></script>
+  <!-- main.css -->
+  <link rel="stylesheet" href="/public/css/main.css">
   <style>
   .post-list-heading{
    visibility: hidden;
   }
-
+ 
   </style>
   
 
