--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -1,19 +1,17 @@
 ---
-layout: default
+layout: home
 ---
 
 <div class="row">
-	<ul>
-	　　{% for post in site.categories.[page.category] %}
-	　　　　<li class="card blog-item" >
-				<div class="card-content">
-					<div class="card-title">
-						<a href="{{ post.url }}">{{ post.title }}</a>
-					</div>
-				  	<p class="excerpt">{{ post.excerpt}}</p>
-					<p>{{ post.date | date: "%Y年%m月%d日" }}</p>
-				</div>
-			</li>
-	　　{% endfor %}
-	</ul>
+  <ul>{% for post in site.categories.[page.category] %}
+	<li class="card blog-item" >
+	  <div class="card-content">
+        <div class="card-title">
+			<a href="{{ post.url }}">{{ post.title }}</a>
+		</div>
+		<p class="excerpt">{{ post.excerpt}}</p>
+		<p>{{ post.date | date: "%Y年%m月%d日" }}</p>
+	  </div>
+	</li>{% endfor %}
+  </ul>
 </div>
