--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,7 +11,7 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item active" style="text-decoration: none;" href = '{{ site.github.url }}' >首页</a>
+      <a class="sidebar-nav-item active" style="text-decoration: none;" href = 'http://oncew.com' >首页</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
